crates/strider-analyze/tests/snapshots/aarch64be__complex__bit_test_zero.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x2101d8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ q1", shape=house, fillcolor="#163030"];
  "11" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v19" [color="#888888", style=dashed];
  "v19" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "12" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2101c4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "12" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "12" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "12" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1ffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "27" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "29" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "35" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "38" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="φ q0", shape=house, fillcolor="#163030"];
  "11" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v46" [color="#888888", style=dashed];
  "v46" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v47" [color="#888888", style=dashed];
  "v47" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ x1", shape=house, fillcolor="#163030"];
  "11" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "12" -> "v48" [color="#888888", style=dashed];
  "v48" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v49" [color="#888888", style=dashed];
  "v49" -> "16" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "50" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="φ Val", shape=house, fillcolor="#163030"];
  "11" -> "50" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="φ Mem", shape=house, fillcolor="#163030"];
  "11" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "53" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "5" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x2a:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "12" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "53" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "58" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x11:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "10" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
